Fixed Footer. Cleaned up colors and alignments for specific-riddle page

--- a/client_wwofdrslide/src/components/Footer/Footer.css
+++ b/client_wwofdrslide/src/components/Footer/Footer.css
@@ -6,42 +6,40 @@
     z-index: 1000;
   } */
 
-  .text-sz {
-    font-size: .8rem;
-  }
+.footer-container .cr .text-sz {
+  font-size: .8rem;
+}
 
-  /* .footer-container .footer {
+/* .footer-container .footer {
     width: 100%;
     align-items: center;
     line-height: 1.25rem;
   } */
-  .footer-container .cr {    
-    color: white;  
-    background-color: rgba(62,78,66,1);
-    font-size: 10px;
-    letter-spacing: 1px;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    padding: 0.5rem;
+.footer-container .cr {
+  color: white;
+  background-color: rgba(62, 78, 66, 1);
+  font-size: 10px;
+  letter-spacing: 1px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 0.5rem;
+}
+
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+
+  .footer-container {
+    padding: 1rem;
   }
 
-  @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-
-    .footer-container  {
-      padding: 1rem;
-    }
-
-    /* .footer-container .footer {
+  /* .footer-container .footer {
       display: flex;
       justify-content: space-evenly;
     } */
 
-    .footer-container .cr {
-      font-size: 12px;
-    }
+  .footer-container .cr {
+    font-size: 12px;
   }
+}
 
-  @media screen and (min-width: 1025px) {
-
-  }
+@media screen and (min-width: 1025px) {}
